# Snapper

./: .gitignore  COPYING.BSD  LICENSE  README.md  mockup.tgz
bnp/: makebmc
bnp/buildtools/: .gitattributes  bmc-rules.mk  install_rootfs  lib_list  lib_smart  make_under_sdk  prep_autotools  run_under_sdk
bnp/buildtools/m4/: .gitignore  init.m4  xroot.m4
bnp/buildtools/m4/config/: KEEP
bnp/makebmc.d/: makebmc.arch  makebmc.clean  makebmc.color  makebmc.common  makebmc.components  makebmc.prep  makebmc.pristine  makebmc.sdk  makebmc.targets  makebmc.verbosity  makebmc.world
sdk/: environment-setup-i686-linux-gnueabi
www/: Makefile.am  configure.ac
www/rootfs/etc/: snapper.conf.py
www/rootfs/etc/nginx/: dhparam.pem  nginx.conf  server.crt  server.key  snapper_server.conf
www/snapper/: .gitignore  Makefile.am
www/snapper/engine/: Makefile.am  authorization.cpp  cache_common.h  engine_api.cpp  engine_api.h  engine_cache.cpp  engine_cache.h  json_cache.cpp  json_cache.h  odata_service_exception.cpp  odata_service_exception.h  protocol.h  request_context.cpp  request_context.h  request_handler.cpp  request_handler.h  rf_debug.h  rf_engine_error.h  rf_shm_session.cpp  rf_shm_session.h  sessions.cpp  sessions.h  topology.cpp  topology.h
www/snapper/engine/datainf/: BSONCache.cpp  BSONCache.h  BSONCache_Config.cpp  DataInterface.cpp  DataInterface.h  DataInterfaceConfigMgr.cpp  DataInterfaceConfigMgr.h  DataInterfaceMgr.cpp  DataInterfaceMgr.h  datainf_log.cpp  datainf_log.h  datamgr_types.h
www/snapper/engine/di_metadata/: TODO
www/snapper/engine/helper/: helpercmn.h
www/snapper/engine/jwt/: rf_jwt.c  rf_jwt.h
www/snapper/engine/monitor/: common.h  eventing.h  rfmon_clt.c  rfmon_clt.h
www/snapper/engine/providers/: Bios.cpp  Chassis.cpp  ChassisCollection.cpp  ComputerSystem.cpp  ComputerSystemCollection.cpp  Drive.cpp  EthernetInterface.cpp  EthernetInterfaceCollection.cpp  Fan.cpp  JsonSchemaFile.cpp  JsonSchemaFileCollection.cpp  Manager.cpp  ManagerCollection.cpp  Memory.cpp  MemoryCollection.cpp  MessageRegistryFile.cpp  MessageRegistryFileCollection.cpp  NetworkAdapter.cpp  NetworkAdapterCollection.cpp  NetworkInterface.cpp  NetworkInterfaceCollection.cpp  NetworkPort.cpp  NetworkPortCollection.cpp  PCIeDevice.cpp  PCIeFunction.cpp  Power.cpp  PowerControl.cpp  PowerSupply.cpp  Processor.cpp  ProcessorCollection.cpp  ServiceRoot.cpp  Storage.cpp  StorageCollection.cpp  StorageController.cpp  Task.cpp  TaskCollection.cpp  Temperature.cpp  Thermal.cpp  Voltage.cpp
www/snapper/engine/providers/base/: ProviderHelper.cpp  SnapperMessage.cpp  SnapperPrivilege.cpp  SnapperProvider.cpp  SnapperRegistry.cpp  SnapperSchema.cpp
www/snapper/engine/util/: message_registeries_autogen.cpp  message_registeries_autogen.h  privilege_registeries_autogen.cpp  privilege_registeries_autogen.h  snapper_autogen_msgreg.cpp  snapper_autogen_privreg.cpp  snapper_autogen_schema.cpp
www/snapper/include/bson/: bsonassert.h  bsonelement.h  bsonobj.h  oid.h  stringdata.h
www/snapper/include/bson/util/: builder.h  json.h  json_free_inl.h  time_support.h
www/snapper/include/class/: AccountService.h  AuditEventMessage.h  BaseMessage.h  Bios.h  Chassis.h  ChassisCollection.h  ClassCommon.h  ClassNames.h  ComputerSystem.h  ComputerSystemCollection.h  Drive.h  EthernetInterface.h  EthernetInterfaceCollection.h  Fan.h  JsonSchemaFile.h  JsonSchemaFileCollection.h  Manager.h  ManagerCollection.h  Memory.h  MemoryCollection.h  MessageRegistryFile.h  MessageRegistryFileCollection.h  NetworkAdapter.h  NetworkAdapterCollection.h  NetworkInterface.h  NetworkInterfaceCollection.h  NetworkPort.h  NetworkPortCollection.h  PCIeDevice.h  PCIeFunction.h  Power.h  PowerControl.h  PowerSupply.h  Processor.h  ProcessorCollection.h  ProviderHelper.h  ServiceRoot.h  SnapperMessage.h  SnapperPrivilege.h  SnapperProvider.h  (+211 more)
www/snapper/include/odata/common/: basic_types.h  xmlhelpers.h
www/snapper/include/odata/core/: odata_exception.h  odata_uri_parser.h
www/snapper/include/odata/edm/: edm_entity_container.h  edm_entity_set.h  edm_model.h  edm_model_reader.h  edm_model_utility.h  edm_model_writer.h  edm_operation_import.h  edm_schema.h  edm_singleton.h  edm_type.h  odata_edm.h
www/snapper/odata/: License.txt  Makefile.am
www/snapper/odata/bson/: base64.cpp  bsonobj.cpp  json.cpp  md5.cpp  nonce.cpp  oid.cpp  time_support.cpp
www/snapper/odata/common/: uri.cpp  xmlhelpers.cpp
www/snapper/odata/core/: odata_context_url_parser.cpp  odata_uri_parser.cpp
www/snapper/odata/edm/: edm_model.cpp  edm_model_reader.cpp  edm_model_utility.cpp  edm_model_writer.cpp  edm_schema.cpp  edm_type.cpp
www/snapper/pyapp/: .gitignore  Makefile.am  setup.py
www/snapper/pyapp/app/: __init__.py  config.py  create_app.py  flask_sse.py  myapp.py  snapperapp.py  sse.py  urls.py
www/snapper/pyapp/app/extmod_c/: __init__.py  connector.c  extmod_types.h  test.c
www/snapper/pyapp/app/plugin/: Processor.py  ServiceInfo.py  __init__.py
www/snapper/pyapp/mockup/redfish/v1/: index.json
www/snapper/pyapp/openmodules/: put_osc_here
www/stublib/: Makefile.am  cim_stub.cpp
www/stublib/include/cmr/common/: cim_api.h
