#-------------------------------------------------------------------------
# Copyright (c) 2018-present, Lenovo. All rights reserved. 
# Licensed under BSD, see COPYING.BSD file for details.
#---------------------------------------------------------------------------

#---------------------------------------------------------------------------
PKGSRC_TGT = rootfs

#---------------------------------------------------------------------------
SUBDIRS = stublib snapper

#---------------------------------------------------------------------------
include $(BMC_RULES)
