#-------------------------------------------------------------------------
# Copyright (c) 2018-present, Lenovo. All rights reserved. 
# Licensed under BSD, see COPYING.BSD file for details.
#---------------------------------------------------------------------------

m4_include([../bnp/buildtools/m4/init.m4])
m4_include([../bnp/buildtools/m4/xroot.m4])

#--------------------------------------------------------------------
AC_CONFIG_FILES([
    Makefile
    stublib/Makefile
    snapper/Makefile
    snapper/odata/Makefile
    snapper/engine/Makefile
    snapper/pyapp/Makefile
])

AC_OUTPUT
