#-------------------------------------------------------------------------
# Copyright (c) 2018-present, Lenovo. All rights reserved. 
# Licensed under BSD, see COPYING.BSD file for details.
#---------------------------------------------------------------------------

#---------------------------------------------------------------------------
PKGSRC_TGT = rootfs
EXPORT_SUBDIR = snapper

SUBDIRS = odata engine pyapp

#---------------------------------------------------------------------------




#---------------------------------------------------------------------------
include $(BMC_RULES)
